<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="43dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center"
                android:text="@string/position"
                android:textSize="11dp" />

            <TextView
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/range"
                android:textSize="11dp" />

            <TextView
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/hand"
                android:textSize="11dp" />

            <TextView
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:gravity="center"
                android:text="@string/random"
                android:textSize="11dp" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="2dp"
                android:text="@string/delete"
                android:textSize="11dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hands"
                android:textSize="11dp" />

            <TextView
                android:id="@+id/eqiuty"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center"
                android:text="@string/equity"
                android:textSize="11dp" />
        </LinearLayout>

        <include
            android:id="@+id/tab1"
            layout="@layout/excerpt" />
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

</LinearLayout>